@@ -1,5 +1,7 @@
 xine-lib (1-rc4)
   * experimental DTS software decoder using libdts
+  * SPU decoder: timestamp handling for NAV packets fixes the menu on the first
+    DVD of "24" season 1
 
 xine-lib (1-rc3c)
   * fix the deadlock with non-seekable input plugins
